--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,13 @@ android:
   - android-26
   - extra-google-m2repository
   - extra-android-m2repository
-script:
-- "./build-apk.sh"
+
+script: 
+- "./gradlew clean"
+
+jobs:
+  include:
+    - stage: test
+      script: "/gradlew testDebugUnitTest"
+    - stage: build
+      script: "./build-apk.sh"
