--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ deploy:
   skip_cleanup: true
   on:
     repo: mobilefactoryamiltone/sample-android-ci
-    tags: true
+    tags: false
+    all_branches: true
